--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>Drive Way Hunt</title>
     <meta name="description" content=" " />
     <meta name="keywords" content=" " />
-    <!--<link rel="stylesheet" type="text/css" href="sass/style.css" />-->
+    <link rel="stylesheet" type="text/css" href="sass/style.css" />
   </head>
   <body data-ng-app="drivewayApp" data-ng-controller="AppController">
     <!-- Header: Menu/Nav Buttons Trigger Modal -->
