--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content=" " />
     <meta name="keywords" content=" " />
     <link rel="stylesheet" type="text/css" href="sass/style.css" />
+    <!--NEED UI GIRLS HELP-->
+    <style>
+    .angular-google-map-container { height: 400px; }
+    </style>
   </head>
   <body data-ng-app="drivewayApp" data-ng-controller="AppController">
     <!-- Header: Menu/Nav Buttons Trigger Modal -->
