--- a/app/index.html
+++ b/app/index.html
@@ -8,15 +8,15 @@
     <meta name="keywords" content=" " />
     <link rel="stylesheet" type="text/css" href="sass/style.css" />
   </head>
-  <body data-ng-app="drivewayApp" data-ng-controller="AppController">
+  <body data-ng-app="drivewayApp" data-ng-controller="AppController" data-ng-cloak>
     <!-- Header: Menu/Nav Buttons Trigger Modal -->
     <header id="userMenu">
       <ol class="modalContainer">
-        <li>
+        <li><!-- login/log out modal button -->
           <button class="md-trigger btn btn-1 btn-1a" data-modal="modal-1" type="checkbox" name="userLogIn" value="check" data-ng-click="currentUser ? signOut() : signIn()">{{currentUser ? 'Log Out' : 'Log In'}}</button>
         </li>
         <li> <!-- sign up modal button -->
-          <button id="signUp" class="md-trigger btn btn-1 btn-1a" data-modal="modal-2" type="checkbox" name="userSignUp" value="check" data-ng-if="!currentUser">Sign Up</button>
+          <button id="signUp" class="md-trigger btn btn-1 btn-1a" data-modal="modal-2" type="checkbox" name="userSignUp" value="check" data-ng-if="!currentUser" data-ng-click= "signUp()">Sign Up</button>
          </li>
       </ol>
       <div class="logoContainer">
