Updated Index for Angular group

--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
       </fieldset>
     </div>
   <!-- Search -->
-    <section>
+    <section class="search-container">
       <form id="theForm" class="searchform" autocomplete="off">
         <div class="searchFormInner">
           <main>
