tweak styling, add markers to google map

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   </head>
   <body data-ng-app="drivewayApp" data-ng-controller="AppController" data-ng-cloak>
     <!-- Header: Menu/Nav Buttons Trigger Modal -->
-    <header id="userMenu">
+    <header id="main-app-header">
       <ol class="modalContainer">
         <li><!-- login/log out modal button -->
           <button class="md-trigger btn btn-1 btn-1a" data-modal="modal-1" type="checkbox" name="userLogIn" value="check" data-ng-click="currentUser ? signOut() : signIn()">{{currentUser ? 'Log Out' : 'Log In'}}</button>
@@ -21,7 +21,7 @@
       </ol>
     </header>
 
-    <main data-ng-view></main>
+    <main id="main-app-view" data-ng-view></main>
 
     <div class="md-overlay"></div>
     <script src="app_bundle.js"></script>
