fix sale select row to a title link

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,10 @@
           <button id="signUp" class="md-trigger btn btn-1 btn-1a" data-modal="modal-2" type="checkbox" name="userSignUp" value="check" data-ng-if="!currentUser" data-ng-click= "signUp()">Sign Up</button>
          </li>
       </ol>
+      <!--CHANGE LOGO ON CLICK-->
+      <div class="logoContainer">
+        <img class="headerLogo" src="../../img/fpo_logo.png">
+      </div>
     </header>
 
     <main id="main-app-view" data-ng-view></main>
