added profile button, and more tests

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,11 @@
         </li>
         <li> <!-- sign up modal button -->
           <button id="signUp" class="md-trigger btn btn-1 btn-1a" data-modal="modal-2" type="checkbox" name="userSignUp" value="check" data-ng-if="!currentUser" data-ng-click= "signUp()">Sign Up</button>
-         </li>
+        </li>
+        <li> <!-- sign up modal button -->
+          <button id="signUp" class="md-trigger btn btn-1 btn-1a" data-modal="modal-2" type="checkbox" name="userSignUp" value="check" data-ng-if="currentUser" >Profile</button>
+        </li>
+
       </ol>
       <!--CHANGE LOGO ON CLICK-->
       <div class="logoContainer">
