--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
           <button id="signUp" class="md-trigger btn btn-1 btn-1a" data-modal="modal-2" type="checkbox" name="userSignUp" value="check" data-ng-if="!currentUser" data-ng-click= "signUp()">Sign Up</button>
         </li>
         <li> <!-- sign up modal button -->
-          <button id="signUp" class="md-trigger btn btn-1 btn-1a" data-modal="modal-2" type="checkbox" name="userSignUp" value="check" data-ng-if="currentUser" >Profile</button>
+          <button id="signUp" class="md-trigger btn btn-1 btn-1a" data-modal="modal-2" type="checkbox" name="userSignUp" value="check" data-ng-if="currentUser" data-ng-click="profileRedirect()">Profile</button>
         </li>
 
       </ol>
