Work in progress upload image module html and sass

--- a/app/user_upload_gallery.html
+++ b/app/user_upload_gallery.html
@@ -1,16 +1,6 @@
 <link rel="stylesheet" type="text/css" href="sass/style.css" />
 
 <body>
-  <!-- Header: Menu/Nav Buttons-->
-<!--     <header class="small-nav">
-    <img class="small-logo" data-id="profile-logo" src="img/fpo_logo.png">
-    <button class="logout btn btn-1 btn-1a" type="checkbox" value="check">Log Out</button>
-    </header>
- -->
-  <!-- greeting container -->
-
-<!--   <div class="greeting" name"user-profile">
-  <h3> Hello, {{ Jake }}</h3></div> -->
 
   <!-- sub nav container -->
   <div class="sub-nav">
@@ -44,35 +34,10 @@
     </aside>
     <!-- user profile info bar -->
     <aside class="view-profile">
-        <section class="user-info">
-          <h4>Your Profile</h4>
-          <ol data-type="user-details">
-            <li>Name: {{ Jake Xyz }}</a></li>
-            <li>Email: {{ jake@gmail.com }}</a></li>
-          </ol>
-        </section>
-      <!-- gallery 1 -->
-      <article class="activity-log">
-        <h4 class="activity-title">Your Recent Activities</h4>
-        <p class="activity">{{You Added Event to Calendar}}</p>
-        <p class="activity">{{You Edited Event}}</p>
-        <p class="activity">{{You Created New Event}}</p>
-        </section>
-      </article>
       <article class="view-event">
-        <h4 class="gallery-title">{{Event Title 1}}</h4>
-        <h5 data-type="edit-event"><a href="">Edit Event</a></h5>
-        <section class="gallery-grid">
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
+        <h4 class="image-drop">Drag and Upload Images</h4>
+        <section class="drop-images">
+          <div class="drop-box"></div>
         </section>
       </article>
       <!-- gallery 2 -->
