polish changing header class on search submit and resultant transitions

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   </head>
   <body data-ng-app="drivewayApp" data-ng-controller="AppController" data-ng-cloak>
     <!-- Header: Menu/Nav Buttons Trigger Modal -->
-    <header id="main-app-header" class="home-view">
+    <header id="main-app-header" ng-class="appView">
       <ol id="nav">
         <li><!-- login/log out modal button -->
           <button class="md-trigger btn btn-1 btn-1a" data-modal="modal-1" type="checkbox" name="userLogIn" value="check" data-ng-click="currentUser ? signOut() : signIn()">{{currentUser ? 'Log Out' : 'Log In'}}</button>
