added user_load html and sass, removed purple color from base

--- a/app/user_upload_gallery.html
+++ b/app/user_upload_gallery.html
@@ -41,15 +41,9 @@
         </section>
       </article>
       <!-- gallery 2 -->
-      <article class="view-event">
-        <h4 class="gallery-title">{{Event Title 1}}</h4>
-        <h5 data-type="edit-event"><a href="">Edit Event</a></h5>
-        <section class="gallery-grid">
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
+      <article class="view-thumbnails">
+<!--       <h5 data-type="left-right"><a href="">Edit Event</a></h5> -->
+        <section class="gallery-thumbnails">
           <div class="e-gallery"></div>
           <div class="e-gallery"></div>
           <div class="e-gallery"></div>
@@ -57,6 +51,7 @@
           <div class="e-gallery"></div>
         </section>
       </article>
+
 
     </aside>
   </div>
