tweak home page & search results page styling, add basic footer

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,9 @@
     <main id="main-app-view" data-ng-view></main>
 
     <div class="md-overlay"></div>
+    <footer id="footer">
+      <p>A prototype-in-progress.</p>
+    </footer>
     <script src="app_bundle.js"></script>
   </body>
 </html>
