edited error1-4 pages. now all consolidated to error.sass

--- a/app/error1.html
+++ b/app/error1.html
@@ -17,7 +17,7 @@
                 <li class="email" data-id="login-user">
                     <input id="loginEmail" type="email" name="email" value=" " title="Your Email" pattern="[^ @]*@[^ @]*">
                 </li>
-                <button class="btn md-close" name="submit" value="Submit" data-id="login-submit">Submit</button>
+                <button class="btn md-close" name="submit" value="Submit" data-id="login-error-submit">Submit</button>
               </ol>
           </form>
   </body>
