added home redirect

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
       </ol>
       <!--CHANGE LOGO ON CLICK-->
       <div id="logo-container">
-        <img class="header-logo" src="../../img/fpo_logo.png">
+        <img class="header-logo" src="../../img/fpo_logo.png" data-ng-click="home()" style="cursor:pointer;">
       </div>
     </header>
 
